Fixed paragraphs to text-align left and figured out how to center the buttons with a bootstrap tip from Anya.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -16,6 +16,10 @@ p {
 }
 
 /* Home Page */
+nav {
+    color: orange;
+}
+
 .jumbotron{
     border-bottom: solid white;
     /* border-top: solid white; */
